@@ -1,3 +1,14 @@
+2005-05-23  mallum,,,  <mallum@openedhand.com>
+
+	* src/matchbox-stroke-ui.c: (handle_xerror),
+	(mb_stroke_ui_resources_create), (mb_stroke_ui_fullscreen_init),
+	(mb_stroke_ui_fullscreen_stroke_finish),
+	(mb_stroke_ui_fullscreen_stroke_start),
+	(mb_stroke_ui_clear_recogniser), (mb_stroke_ui_pentip_draw_point),
+	(mb_stroke_ui_pentip_draw_line_to), (mb_stroke_ui_stroke_start),
+	(mb_stroke_ui_stroke_update), (mb_stroke_ui_stroke_finish):
+	Improve fullscreen support.
+
 2005-05-20  mallum,,,  <mallum@openedhand.com>
 
 	* Makefile.am:
